test/compile_failure/13_assignment_to_constant.c
// EXPECT-ERRORS: 1
// EXPECT: assignment target is not a modifiable lvalue
int main() {
    const int value = 1;
    value = 2;
    return value;
}
